# soul-protocol

./: .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  WHITEPAPER.md  pyproject.toml
.claude/: CLAUDE.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  mentorship_question.yml
.github/workflows/: ci.yml  pr-quality-gate.yml  publish.yml  stale.yml
assets/: generate_charts.py
docs/: 0.3.2-thesis-a-validation.md  COMPARISON.md  GAP-ANALYSIS.md  SPEC.md  api-reference.md  architecture.md  cli-reference.md  cognitive-engine.md  configuration.md  core-concepts.md  decision-traces.md  eval-format.md  getting-started.md  guide-soul-inject.md  index.md  integrations.md  lfdt-mentorship.md  manual-testing.md  mcp-server.md  memory-architecture.md  memory-journal-spike.md  org-journal-spec.md  org.md  rfc-memory-update-primitives.md  self-model.md  soul-optimize.md  trust-chain.md
docs/wiki/: .last-indexed-sha  a2a-agent-card-bridge-soul-protocol-and-google-a2a-interoperability.md  a2a-agent-card-models-soul-protocol-interop-with-googles-agent-to-agent-protocol.md  act-r-activation-based-memory-scoring.md  aes-256-gcm-encryption-for-soul-archive-files.md  anthropicengine-claude-api-cognitive-adapter.md  archival-memory-store-for-conversation-history.md  bm25-and-token-overlap-memory-search-engine.md  bond-model-human-soul-relationship-strength.md  bundled-soul-templates-role-archetype-registry.md  callableengine-wrap-any-function-as-a-cognitive-engine.md  cli-package-namespace-soulprotocolcli.md  cli-test-suite-agent-platform-integration-setup-soul-setup.md  cli-test-suite-core-commands-birth-inspect-status-remember-recall-init.md  cli-test-suite-full-onboarding-multi-user-lifecycle-and-destroy-workflow.md  cli-test-suite-health-cleanup-and-repair-commands.md  cli-test-suite-org-initialization-soul-org-init.md  cli-test-suite-soul-context-injection-into-ai-ide-config-files.md  cognitive-adapters-package-provider-adapter-exports.md  cognitive-engine-package-public-api-and-adapter-exports.md  cognitive-prompt-templates-for-llm-powered-memory-tasks.md  cognitiveengine-protocol-heuristicengine-and-cognitiveprocessor.md  context-package-exports-lcmcontext-and-sqlitecontextstore.md  context-subpackage-interface-lossless-context-management-spec-layer.md  contextengine-protocol-interface-for-lossless-context-window-management.md  core-memory-manager-always-in-context-identity-block.md  crypto-package-exports-soul-file-encryption-helpers.md  cryptographic-encryption-test-suite-fernet-pbkdf2.md  d1-memory-recall-evaluator.md  d2-emotional-intelligence-evaluator.md  d3-personality-expression-evaluator.md  d4-bond-and-relationship-evaluator.md  d5-self-model-evaluator.md  d6-identity-continuity-evaluator.md  d7-portability-evaluator.md  decision-trace-models-structured-agent-proposal-and-human-correction-events.md  developer-onboarding-demo-smoke-test.md  did-generation-for-digital-souls.md  dna-subpackage-public-api-re-export-module.md  dna-to-system-prompt-and-markdown-renderer.md  (+291 more)
examples/: logging_config.py  memory_categories.py  multi_soul.py  pocketpaw_integration.py  real_agent.py  test_pocketpaw_integration.py
examples/soul-agent/: README.md  SETUP.md  anaya.yaml  soul_agent.py
fixtures/benchmark/: README.md
paper/: .gitignore  Makefile  main.tex  references.bib
research/: EVAL-FRAMEWORK.md  README.md  __init__.py  __main__.py  agents.py  analysis.py  conditions.py  config.py  haiku_engine.py  litellm_engine.py  metrics.py  run.py  run_ablation.py  run_dspy_optimization.py  run_scale_ablation.py  run_tier2.py  scenarios.py  simulator.py  test_smoke.py
research/dspy_training/: __init__.py  generate_dataset.py
research/eval/: __init__.py  __main__.py  llm_judge.py  report.py  suite.py
research/eval_ui/: README.md  __init__.py  app.py
research/long_horizon/: __init__.py  analyze.py  runner.py  scale_scenarios.py  scenarios.py
research/quality/: __init__.py  conditions.py  enhanced_runner.py  judge.py  mem0_benchmark.py  multi_judge.py  responder.py  run_quality.py  scenario_generator.py  test_scenarios.py
research/results/: EVALUATION-SUMMARY.md
rfc/: RFC-001-IDENTITY-AND-DID.md  RFC-002-MEMORY-STORE-INTERFACE.md  RFC-003-COGNITIVE-ENGINE-PROTOCOL.md  RFC-004-SOUL-FILE-FORMAT.md  RFC-005-ETERNAL-STORAGE-PROVIDER.md
schemas/: Biorhythms.schema.json  CommunicationStyle.schema.json  CoreMemory.schema.json  DNA.schema.json  EvolutionConfig.schema.json  GeneralEvent.schema.json  Identity.schema.json  Interaction.schema.json  MemoryEntry.schema.json  MemorySettings.schema.json  Mood.schema.json  Mutation.schema.json  Personality.schema.json  README.md  ReflectionResult.schema.json  SelfImage.schema.json  SignificanceScore.schema.json  SomaticMarker.schema.json  SoulConfig.schema.json  SoulManifest.schema.json  SoulState.schema.json  soul-protocol.schema.json
scripts/: e2e_paw_integration.py  generate_schemas.py  simulate.py  simulate_memory_evolution.py  simulate_real_users.py  smoke-v0.5.0.sh
skills/soul-protocol/: SKILL.md
spec/: DSP-MULTI-SOUL-COORDINATION.md  SOUL-FORMAT-SPEC.md
tests/: __init__.py  conftest.py  test_a2a_bridge.py  test_archival.py  test_archival_integration.py  test_auto_consolidation.py  test_bond.py  test_bug_15_core_memory.py  test_bundled_templates.py  test_cognitive_adapters.py  test_compaction.py  test_compression.py  test_context_models.py  test_context_store.py  test_contradiction_pipeline.py  test_crypto.py  test_demo.py  test_dream.py  test_dspy_modules.py  test_e2e_integration.py  test_e2e_new_primitives.py  test_e2e_real_world.py  test_encryption.py  test_error_handling.py  test_evaluation.py  test_export.py  test_gdpr_deletion.py  test_graph_traversal.py  test_lcm.py  test_learning_events.py  test_mcp_sampling_engine.py  test_memory_v2.py  test_memory_visibility.py  test_multi_participant.py  test_phase1_fixes.py  test_progressive_recall.py  test_reincarnation.py  test_rerank.py  test_retrieval.py  test_retrieval_trace.py  (+10 more)
(+425 files in other folders)
