# soul-protocol — Portable AI identity and memory
# Updated: 2026-03-27 — v0.2.8 release: Added soul health/cleanup/repair CLI, 5 new MCP
#   psychology tools (23 total), --full/--json recall flags, biorhythms always-on defaults,
#   evolution mutation persistence fix. Added httpx dep to ollama extra.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soul-protocol"
version = "0.2.8"
description = "The open standard for portable AI identity and memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "OCEAN Foundation" }
]
keywords = [
    "ai", "soul", "memory", "identity", "agent",
    "llm", "langchain", "openai", "anthropic",
    "portable", "protocol", "digital-soul"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
engine = [
    "pyyaml>=6.0",
    "click>=8.0",
    "rich>=13.0",
    "cryptography>=41.0",
]
mcp = [
    "fastmcp>=2.0",
    "soul-protocol[engine]",
]
dspy = []  # dspy depends on litellm which breaks uv sync — install dspy manually if needed
graph = ["networkx>=3.0"]
vector = ["numpy>=1.24"]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.0.0"]
ollama = ["httpx>=0.27"]
litellm = []  # litellm breaks uv sync resolution — install litellm manually if needed
llm = ["anthropic>=0.40.0", "openai>=1.0.0"]
lcm = []  # Zero new deps — sqlite3 is stdlib, Pydantic is already core
embeddings-st = ["sentence-transformers>=2.0.0"]
embeddings-openai = ["openai>=1.0.0"]
embeddings-ollama = ["ollama>=0.4.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.8",
    "soul-protocol[engine]",
]
all = ["soul-protocol[engine,mcp,graph,vector,llm,lcm,embeddings-st,embeddings-openai,embeddings-ollama]"]

[project.scripts]
soul = "soul_protocol.cli.main:cli"
soul-mcp = "soul_protocol.mcp:run_server"

[project.urls]
Homepage = "https://github.com/qbtrix/soul-protocol"
Repository = "https://github.com/qbtrix/soul-protocol"
Issues = "https://github.com/qbtrix/soul-protocol/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/soul_protocol"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line-too-long — will fix incrementally
